# HikariBackend

./: CMakeLists.txt  README.md
benchmark/: CMakeLists.txt  http_request_parse_bench.cpp
lib/logging/: README.md
lib/logging/rickycorte/: Logging.h  Logging.hpp
src/: CMakeLists.txt  HikariStaticConfig.hpp  Server.cpp  Server.hpp  Source.cpp
src/config/: CMakeLists.txt  Config.cpp  ConfigFile.cpp  README.md
src/config/include/config/: Config.h  Config.hpp  ConfigFile.h
src/config/src/: Config.cpp  ConfigFile.cpp
src/global/: GlobalStaticConfig.hpp
src/http/: CMakeLists.txt  README.md  Reply.cpp  Request.cpp  Request.hpp
src/http/include/http/: Server.hpp  ServerStaticConfig.hpp
src/http/src/: Reply.cpp  Server.cpp
tests/http/: http_request_test.py
